baremetal/sys.fabrikam.pl/longhorn/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "sys-fabrikam-pl-letsencrypt-prod" # use production cert issuer for sys.fabrikam.pl
  name: longhorn-frontend-ingress
  namespace: longhorn-system
  labels:
    external-dns: sys.fabrikam.pl  # use external dns for sys.fabrikam.pl
spec:
  ingressClassName: sys-fab-pl-ing-ctrl # use specific Ingress Controller
  tls:
  - hosts:
    - longhorn.sys.fabrikam.pl
    secretName: longhorn.sys.fabrikam.pl # this will be the name of created certificate 
  rules:
  - host: longhorn.sys.fabrikam.pl
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
